[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drhp-intel"
version = "1.0.0"
description = "DRHP/IPO prospectus intelligence — auto-extract financials, risk flags, RPTs from Indian IPO filings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["drhp", "ipo", "sebi", "india", "investment-banking", "financial-analysis", "prospectus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["click>=8.0", "rich>=13.0"]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
drhp = "drhp_intel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drhp_intel*"]
